<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数: </string>
    <string name="newgame">重新开始: </string>
    <string name="hintgame">提示 </string>
    <string name="bestscore">最高分：</string>
    <string name="appinfo" >作者： Eung-yuong Liu            联系人QQ： 1187597904</string>

    <string name="hint">本游戏是基于android 手机系统制作的小型"2048游戏"案例,通过手指的上下左右滑动让相同的数字相加， 格子占满则游戏失败。分数达到10000或者 有一个格子数为2048 则通关成功，成功截图发给工作人员可得惊喜红包一份。</string>
</resources>
