<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/container" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestscore" />

        <TextView
            android:id="@+id/tvBestScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
	<RelativeLayout
	     android:layout_width="fill_parent"
         android:layout_height="wrap_content"
	     >
    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newgame" />
    <Button
        android:id="@+id/btnHintGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintgame"
        android:layout_toRightOf="@+id/btnNewGame"
         />
	</RelativeLayout>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.game.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        </com.game.GameView>

        <com.game.AnimLayer
            android:id="@+id/animLayer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </com.game.AnimLayer>
    </FrameLayout>
    
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/appinfo"/>
</LinearLayout>